[tool.poetry]
name = "yapyang"
version = "0.0.1"
description = "Yet Another PYANG"
authors = ["a.faria <antonio.faria@nomios.co.uk>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include="yapyang"}]

[tool.ruff]
line-length=79

[tool.pytest.ini_options]
addopts = "--cov=yapyang --cov-report term-missing -vv"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
