[tool.poetry]
name = "yapyang"
version = "0.2.0"
description = "An open source Python package that helps developers to translate YANG (RFC6020/RFC7950) data models to Python."
authors = ["a.faria <antonio.faria@nomios.co.uk>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/nomios-opensource/yapyang"
documentation = "https://nomios-opensource.github.io/yapyang"

[tool.poetry.dependencies]
python = "^3.8"
ordered-set = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
mkdocs-material = "^9.5.30"
ruff = "^0.5.6"
tox = "^4.17.1"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=79

[tool.pytest.ini_options]
addopts = "--cov=yapyang --cov-report term-missing -vv"
